--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tauri-apps/cli": ">=2.0.0-beta.0",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.11.1",
     "internal-ip": "^7.0.0",
+    "postcss": "^8.4.38",
     "svelte": "^4.2.8",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.0.0"
   }
 }
